tests/cases/scc/error/0016-arrayinitsize.c.res
./tests/cases/scc/error/0016-arrayinitsize.c:2:19:	error:   too much initialization.
exit code 1
